# betterstackrust

./: .dockerignore  .env  Cargo.toml  Dockerfile
.github/workflows/: cd_api.yml  cd_pusher.yml  cd_worker.yml
Docker/: Dockerfile.api  Dockerfile.pusher  Dockerfile.worker
api/: Cargo.toml
api/src/: auth_middleware.rs  main.rs  request_input.rs  request_output.rs
api/src/route/: app.rs  user.rs  website.rs
pusher/: Cargo.toml
pusher/src/: main.rs
redisstreams/: Cargo.toml
redisstreams/src/: config.rs  lib.rs  redis.rs
store/: Cargo.toml  diesel.toml
store/migrations/2025-06-21-121259_user_website/: up.sql
store/migrations/2025-08-17-163759_changesusertousers/: up.sql
store/src/: config.rs  lib.rs  schema.rs  store.rs
store/src/models/: app.rs  mod.rs  user.rs  website.rs
worker/: Cargo.toml
worker/src/: main.rs
