[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
diesel-async = { version = "0.7.0", features = ["postgres", "bb8"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"]}
chrono = { version = "0.4.41", features = ["serde"]}
native-tls = { version = "*" }
postgres-native-tls = "0.5"
tokio-postgres-native-tls = { version = "0.1.0-rc.1" }
futures-util = "0.3"
tokio-postgres = "0.7.15"
